loader, first data,js requests and templates
added loader middleware, base data requests to get quiz data from the server, added details, edit/create view templates

--- a/index.html
+++ b/index.html
@@ -43,8 +43,23 @@
         <header id="titlebar">
         </header>
 
-        <main id="content">
-            <!-- Dynamic content here -->
+        <main >
+          
+        <section id="content">
+        </section>
+
+        <div id="loader" class="sk-cube-grid">
+          <div class="sk-cube sk-cube1"></div>
+          <div class="sk-cube sk-cube2"></div>
+          <div class="sk-cube sk-cube3"></div>
+          <div class="sk-cube sk-cube4"></div>
+          <div class="sk-cube sk-cube5"></div>
+          <div class="sk-cube sk-cube6"></div>
+          <div class="sk-cube sk-cube7"></div>
+          <div class="sk-cube sk-cube8"></div>
+          <div class="sk-cube sk-cube9"></div>
+      </div>
+
         </main>
 
         <footer id="footer">Viktor Kostadinov &copy; 2021</footer>
